3.13.0
======
May 31, 2022
- Remove concatenation syntax in favor of interpolation/substitution

3.12.3
======
May 30, 2022
- Update console summary report indenting

3.12.2
======
May 30, 2022
- Update console summary report to include feature name

3.12.1
======
May 25, 2022
- Update libs
  - Update scala from v3.1.1 to v3.1.2
  - Update tika-core from v1.26 to v1.28.2
  - Update jackson-databind from v2.13.2.2 to v2.13.3
  - Update gherkin from v22.0.0 to v23.0.1
  - Update scala-logging from v3.9.4 to v3.9.5

3.12.0
======
May 25, 2022
- Add where clause (filter) to `@Examples` tag
- Add note for turning off declarative feature mode and strict behavior rules in respective error messages
- Interpolate input data into feature and scenario level tags, names and descriptions
- No wrap on table data rows in HTML

3.11.10
=======
May 23, 2022
- Fix Lazy/Eager validation

3.11.9
======
May 12, 2022
- Remove redundant data from negated assertion error messages

3.11.8
======
May 11, 2022
- Adjust keyword column width in HTML reports

3.11.7
======
May 04, 2022
- Auto expand low level single step links in HTHML reports
- Include `not` prefix when naming negated synthetic If stepDefs

3.11.6
======
May 03, 2022
- Grey attachments for ignored steps in HTML reports

3.11.5
======
Apr 28, 2022
- HTML encode error messages in HTML detail reports

3.11.4
======
Apr 27, 2022
- Change summary HTML report heading from Feature Summary to Results Summary
- Change detail HTML report heading from Feature Detail to Feature Specification

3.11.3
======
Apr 22, 2022
- Fix positioning of attachments dropdown and video buttons in HTML reports
- Improve layout of summary lines in HTML reports

3.11.2
======
Apr 20, 2022
- Optimised Gwen logo image in HTML report to exact size

3.11.1
======
Apr 20, 2022
- Add video, attachments, and error message to HTML report summary lines
- Support CSV data interpolation in feature name and description
- Improve summary layout in HTML reports